@@ -10,7 +10,6 @@ import mycellar.Parametres;
 import mycellar.Program;
 import mycellar.ScreenType;
 import mycellar.ShowHistory;
-import mycellar.Start;
 import mycellar.Stat;
 import mycellar.capacity.CapacityPanel;
 import mycellar.core.ICutCopyPastable;
@@ -24,12 +23,16 @@ import mycellar.core.UpdateViewType;
 import mycellar.core.exceptions.MyCellarException;
 import mycellar.core.text.LabelProperty;
 import mycellar.core.uicomponents.JButtonTabComponent;
+import mycellar.frame.MainFrame;
 import mycellar.importer.Importer;
 import mycellar.placesmanagement.CellarOrganizerPanel;
 import mycellar.placesmanagement.Creer_Rangement;
 import mycellar.placesmanagement.Supprimer_Rangement;
 import mycellar.search.Search;
+import mycellar.showfile.ErrorShowPanel;
 import mycellar.showfile.ShowFile;
+import mycellar.showfile.TrashPanel;
+import mycellar.showfile.WorksheetPanel;
 import mycellar.vignobles.VineyardPanel;
 
 import javax.swing.Icon;
@@ -47,7 +50,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static mycellar.ProgramConstants.SPACE;
 import static mycellar.ProgramConstants.STAR;
@@ -61,12 +63,12 @@ import static mycellar.ScreenType.CHOOSE_CELL2;
 import static mycellar.ScreenType.CHOOSE_CELL3;
 import static mycellar.ScreenType.CHOOSE_CELL4;
 import static mycellar.ScreenType.CREATE_PLACE;
-import static mycellar.ScreenType.CREER_TABLEAU;
+import static mycellar.ScreenType.CREATE_TABLE;
 import static mycellar.ScreenType.EXPORT;
 import static mycellar.ScreenType.HISTORY;
 import static mycellar.ScreenType.IMPORTER;
 import static mycellar.ScreenType.MODIFY_PLACE;
-import static mycellar.ScreenType.PARAMETRES;
+import static mycellar.ScreenType.PARAMETERS;
 import static mycellar.ScreenType.SEARCH;
 import static mycellar.ScreenType.SHOW_ERRORS;
 import static mycellar.ScreenType.SHOW_FILE;
@@ -84,8 +86,8 @@ import static mycellar.core.text.MyCellarLabelManagement.getLabel;
  * Soci&eacute;t&eacute; : Seb Informatique
  *
  * @author S&eacute;bastien Duch&eacute;
- * @version 1.9
- * @since 30/12/22
+ * @version 2.0
+ * @since 26/12/23
  */
 public class ProgramPanels {
 
@@ -258,9 +260,9 @@ public class ProgramPanels {
     }
   }
 
-  public static Creer_Tableaux createCreerTableaux() {
-    final Creer_Tableaux creerTableaux = (Creer_Tableaux) createOpenedObject(Creer_Tableaux.class, CREER_TABLEAU);
-    UPDATABLE_PANELS.put(CREER_TABLEAU, creerTableaux);
+  public static Creer_Tableaux createCreateTable() {
+    final Creer_Tableaux creerTableaux = (Creer_Tableaux) createOpenedObject(Creer_Tableaux.class, CREATE_TABLE);
+    UPDATABLE_PANELS.put(CREATE_TABLE, creerTableaux);
     return creerTableaux;
   }
 
@@ -296,34 +298,22 @@ public class ProgramPanels {
     return showFile;
   }
 
-  public static ShowFile createShowTrash() {
-    ShowFile showFile = (ShowFile) OPENED_PANELS.get(SHOW_TRASH);
-    if (showFile == null) {
-      showFile = new ShowFile(ShowFile.ShowType.TRASH);
-      OPENED_PANELS.put(SHOW_TRASH, showFile);
-      UPDATABLE_PANELS.put(SHOW_TRASH, showFile);
-    }
+  public static TrashPanel createShowTrash() {
+    final TrashPanel showFile = (TrashPanel) createOpenedObject(TrashPanel.class, SHOW_TRASH);
+    UPDATABLE_PANELS.put(SHOW_TRASH, showFile);
     return showFile;
   }
 
-  public static ShowFile createShowWorksheet() {
-    ShowFile showFile = (ShowFile) OPENED_PANELS.get(SHOW_WORKSHEET);
-    if (showFile == null) {
-      showFile = new ShowFile(ShowFile.ShowType.WORKSHEET);
-      OPENED_PANELS.put(SHOW_WORKSHEET, showFile);
-      UPDATABLE_PANELS.put(SHOW_WORKSHEET, showFile);
-    }
-    return showFile;
+  public static WorksheetPanel createWorksheetPanel() {
+    final WorksheetPanel worksheetPanel = (WorksheetPanel) createOpenedObject(WorksheetPanel.class, SHOW_WORKSHEET);
+    UPDATABLE_PANELS.put(SHOW_WORKSHEET, worksheetPanel);
+    return worksheetPanel;
   }
 
-  public static ShowFile createShowErrors() {
-    ShowFile showFile = (ShowFile) OPENED_PANELS.get(SHOW_ERRORS);
-    if (showFile == null) {
-      showFile = new ShowFile(ShowFile.ShowType.ERROR);
-      OPENED_PANELS.put(SHOW_ERRORS, showFile);
-      UPDATABLE_PANELS.put(SHOW_ERRORS, showFile);
-    }
-    return showFile;
+  public static ErrorShowPanel createShowErrors() {
+    final ErrorShowPanel errorShowPanel = (ErrorShowPanel) createOpenedObject(ErrorShowPanel.class, SHOW_ERRORS);
+    UPDATABLE_PANELS.put(SHOW_ERRORS, errorShowPanel);
+    return errorShowPanel;
   }
 
   public static CellarOrganizerPanel createCellarOrganizerPanel() {
@@ -333,11 +323,11 @@ public class ProgramPanels {
   }
 
   public static Parametres createParametres() {
-    return (Parametres) createOpenedObject(Parametres.class, PARAMETRES);
+    return (Parametres) createOpenedObject(Parametres.class, PARAMETERS);
   }
 
-  public static void deleteParametres() {
-    OPENED_PANELS.remove(PARAMETRES);
+  public static void deleteParameters() {
+    OPENED_PANELS.remove(PARAMETERS);
   }
 
   public static CellarOrganizerPanel createChooseCellPanel(IPlacePosition iPlace) {
@@ -427,7 +417,7 @@ public class ProgramPanels {
       protected void done() {
         for (int i = 0; i < TABBED_PANE.getTabCount(); i++) {
           Component tab = TABBED_PANE.getComponentAt(i);
-          if (tab instanceof ManageBottle && ((ManageBottle) tab).getMyCellarObject().equals(myCellarObject)) {
+          if (tab instanceof ManageBottle manageBottle && manageBottle.getMyCellarObject().equals(myCellarObject)) {
             TABBED_PANE.setSelectedIndex(i);
             return;
           }
@@ -440,7 +430,6 @@ public class ProgramPanels {
           bottleName = bottleName.substring(0, 30) + SPACE + THREE_DOTS;
         }
         addTab(bottleName, MyCellarImage.WINE, manage);
-        Start.getInstance().updateMainPanel();
       }
     }.execute();
   }
@@ -451,7 +440,7 @@ public class ProgramPanels {
       protected void done() {
         for (int i = 0; i < TABBED_PANE.getTabCount(); i++) {
           Component tab = TABBED_PANE.getComponentAt(i);
-          if (tab instanceof ManageBottle && ((ManageBottle) tab).getMyCellarObject().equals(myCellarObject)) {
+          if (tab instanceof ManageBottle manageBottle && manageBottle.getMyCellarObject().equals(myCellarObject)) {
             removeTabAt(i);
             return;
           }
@@ -477,32 +466,32 @@ public class ProgramPanels {
       return;
     }
     if (modified) {
-      Start.setApplicationTitleModified();
+      MainFrame.setApplicationTitleModified();
     }
     new MyCellarSwingWorker() {
       @Override
       protected void done() {
         if (index < TABBED_PANE.getTabCount()) {
           Component tab = TABBED_PANE.getComponentAt(index);
-          if (tab instanceof IPanelModifyable) {
-            ((IPanelModifyable) tab).setModified(modified);
+          if (tab instanceof IPanelModifyable iPanelModifyable) {
+            iPanelModifyable.setModified(modified);
           }
         }
       }
     }.execute();
   }
 
-  public static void selectOrAddTab(Component component, String tabLabel, Icon icon) {
+  public static void selectOrAddTab(Component component, String labelId, Icon icon) {
     new MyCellarSwingWorker() {
       @Override
       protected void done() {
         try {
           TABBED_PANE.setSelectedComponent(component);
-          if (component instanceof IPanelModifyable) {
-            ((IPanelModifyable) component).setPaneIndex(TABBED_PANE.getSelectedIndex());
+          if (component instanceof IPanelModifyable iPanelModifyable) {
+            iPanelModifyable.setPaneIndex(TABBED_PANE.getSelectedIndex());
           }
         } catch (IllegalArgumentException e) {
-          addTab(getLabel(tabLabel, LabelProperty.SINGLE), icon, component);
+          addTab(getLabel(labelId, LabelProperty.SINGLE), icon, component);
         }
       }
     }.execute();
@@ -527,8 +516,8 @@ public class ProgramPanels {
         TABBED_PANE.addTab(title, icon, component);
         addCloseButtonToTab(component);
         int index = TABBED_PANE.getTabCount() - 1;
-        if (component instanceof IPanelModifyable) {
-          ((IPanelModifyable) component).setPaneIndex(index);
+        if (component instanceof IPanelModifyable iPanelModifyable) {
+          iPanelModifyable.setPaneIndex(index);
         }
         addTabLabel(index, title);
         TABBED_PANE.setSelectedIndex(index);
@@ -574,7 +563,7 @@ public class ProgramPanels {
 
   public static void removeTabAt(int index) {
     TABBED_PANE.removeTabAt(index);
-    final List<TabLabel> tabLabels = TAB_LABELS.stream().filter(tabLabel -> tabLabel.getIndex() == index).collect(Collectors.toList());
+    final List<TabLabel> tabLabels = TAB_LABELS.stream().filter(tabLabel -> tabLabel.getIndex() == index).toList();
     TAB_LABELS.removeAll(tabLabels);
     TAB_LABELS.stream().filter(tabLabel -> tabLabel.getIndex() > index).forEach(TabLabel::decrementIndex);
   }
@@ -608,7 +597,7 @@ public class ProgramPanels {
               TABBED_PANE.setSelectedIndex(previousIndex);
             }
 
-            // Se deferencer en tant que listener
+            // dereference itself
             TABBED_PANE.removeKeyListener(this);
 
             e.consume();
@@ -628,8 +617,8 @@ public class ProgramPanels {
 
   public static boolean runExit() {
     for (Component c : TABBED_PANE.getComponents()) {
-      if (c instanceof ITabListener) {
-        if (!((ITabListener) c).tabWillClose(null)) {
+      if (c instanceof ITabListener iTabListener) {
+        if (!iTabListener.tabWillClose(null)) {
           Program.Debug("ProgramPanels: Exiting program cancelled!");
           return false;
         }
@@ -645,15 +634,15 @@ public class ProgramPanels {
   public static boolean saveObjects() throws MyCellarException {
     for (int i = 0; i < TABBED_PANE.getTabCount(); i++) {
       Component tab = TABBED_PANE.getComponentAt(i);
-      if (tab instanceof IPanelModifyable) {
-        if (((IPanelModifyable) tab).isModified()) {
-          if (tab instanceof ManageBottle) {
-            if (!((ManageBottle) tab).save()) {
+      if (tab instanceof IPanelModifyable iPanelModifyable) {
+        if (iPanelModifyable.isModified()) {
+          if (tab instanceof ManageBottle manageBottle) {
+            if (!manageBottle.save()) {
               return false;
             }
           }
-          if (tab instanceof AddVin) {
-            if (!((AddVin) tab).save()) {
+          if (tab instanceof AddVin addVin) {
+            if (!addVin.save()) {
               return false;
             }
           }
